# coastlines-dashboard-stats

./: .gitignore  Makefile  README.md  pyproject.toml
data/: areas_to_exclude.gpkg
src/: calculate_stats.py  capitals.py  common.py  config.py  contiguous_hotspots.py  copy_to_s3.py  country_stats.py  generate_blazingspots.py  regional_rates_of_change.py  year_plot_viewer.py
tests/: test_mangrove_area_ha.py
tests/data/: mangrove_test_1.gpkg
